Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
/* ... */
//*** css/itemlist.css
html.wait {
  cursor: wait !important;
}

.itemresult-wrapper {
  margin: 28px 0;
  padding-bottom: 14px;
  border-bottom: 1px solid #e8e8e8;
}

.itemlist:first-child {
  margin-top: 0px;
  margin-left: 15px;
  margin-right: 15px;
  padding-top: 28px;
}

.itemresult {
  position: relative;
}

.itemresult.first {
  margin-top: 20px;
}

.itemresult:last-child {
  margin-bottom: 20px;
}

.itemresult-content {
  width: 100%;
}

.itemresult-content div.thumbnailinlist img {
  max-width: 88px;
  max-height: 66px;
}

.itemresult-content .ajax-spinner {
  position: absolute;
  top: 3px;
  left: 30px;
}

.itemresult-content .thumbnailinlist {
  float: left;
  width: 90px;
  height: 68px;
  padding-right: 15px;
}

.itemresult .opened .attachments-browse.thumbs li.attachmentrow .over-image {
  position: absolute;
  right: 32px;
  top: 9px;
}

.itemresult .opened .attachments-browse.structured {
  list-style-type: none;
  border: none;
}

.itemresult-content h3 {
  margin: 0;
  @include typography-headline-6;
}

.itemresult-content p {
  margin: 5px 0;
  @include typography-subtitle-2;
}

.itemresult-meta {
  margin: 7px 0 10px;
  @include typography-subtitle-1;
}

.itemresult.hilighted .itemresult-content {
  margin: 0;
  width: 459px;
}

.itemresult.hilighted .itemresult-meta {
  margin-bottom: 0;
}

.itemresult.hilighted {
  padding: 10px 10px 0;
}

.itemresult-container.hilighted {
  background-color: #e1e0dc;
}

.itemresult.hilighted .itemresult-content,
.itemresult.selected .itemresult-content {
  margin: 0;
  width: 459px;
}

.page-layout-menu-full .itemresult.hilighted .itemresult-content {
  margin: 0;
  width: 700px !important;
}

.itemresult-container.selected {
  background-color: #ffc;
}

.itemresult.selected {
  padding: 10px 10px 0;
}

.itemresult-rating {
  background: transparent;
}

.itemresult-rating .rating-bar {
  border: none;
  height: 22px;
}

.itemresult-rating div.float-right {
  width: 1%;
  float: none;
  display: table-cell;
  white-space: nowrap;
}

.itemresult-rating div.float-right .btn {
  margin-left: 0 !important;
  margin-right: 4px;
  vertical-align: middle;
  border-radius: 0;
}

.itemresult-rating div.float-right .btn:last-child {
  border-radius: 0 2px 2px 0;
}

.itemresult-rating div.float-right .button-expandable.unselect:hover {
  width: 88px;
}

.itemresult-stars,
.screen-reader {
  display: none;
}

.itemresult-rating button + button {
  margin-left: 3px !important;
}

.itemresult.resource {
  padding-left: 0;
  padding-right: 0;
}

.itemresult-metaline {
  width: 100%;
}

.itemresult-metaline .itemresult-meta-delim,
.itemresult-metaline abbr {
  color: $menuTextColor;
}

.highlight {
  background: none repeat scroll 0 0 #ffffaa;
  font-weight: bold;
}

.itemresult img.cornerimage {
  float: right;
  border: 0;
}

.itemresult-content .toggler {
  display: inline;
  margin: 0 8px;
  cursor: pointer;
  text-align: center;
  position: relative;
  a:before {
    content: "\e226";
    font-family: "Material Icons";
    font-size: 24px;
    color: $menuItemIconColor;
  }
}

.paging {
  clear: both;
  text-align: center;
  ul li {
    display: inline;
    margin: 0 4px;
    list-style-type: none;
    text-transform: capitalize;
  }
}

//management pages
.page-layout-menu-full {
  .action-button.execute-action {
    background-image: url("../../images/baseline_check_white_18dp.png");
  }
}

.page-layout-menu-full {
  .search-layout {
    #col2 {
      width: auto;
    }
  }
}

.itemadmin-page {
  .area {
    width: 100%;
  }
}

.itemresult img.cornerimage {
  padding-top: 36px;
}

.itemresult-container.selected {
  background-color: transparentize($primaryColor, 0.9);
}

.newListSelected.bulkactions {
  width: 100% !important;
  .onBottom {
    width: 100% !important;
    z-index: 1000;
  }
  td {
    cursor: pointer;
  }
}

#treePanel {
  float: left;
  width: auto;
}

#bulkresults_inner {
  textarea {
    width: 100%;
  }
  width: 492px;
}

#bulkresults_container {
  height: 100%;
}

#bss_bulkDialog {
  .modal-footer-inner {
    flex-direction: row;
    justify-content: flex-end;
  }
  height: 600px;
}

#bss_bulkDialogfooter {
  margin-top: 30px;
}

input.term-paths {
  width: 516px;
  position: relative;
}

.itemresult-rating div.float-right {
  .btn {
    margin: 0 8px;
  }
}
.box_content_inner {
  .blue {
    li {
      padding-bottom: 4px;
      padding-top: 4px;
      padding-left: 4px;
    }
  }
}

.criteria-wrapper {
  border: none;
  background: none;
}

.criteria .addbutton {
  padding-left: 460px;
}

td.unselect a {
  &:before {
    content: "\e872";
    font-family: "Material Icons";
    font-size: 20px;
    color: $menuItemIconColor;
    vertical-align: middle;
    padding-right: 8px;
    font-style: normal;
  }
}

.file-upload .file-name {
  width: 400px;
  overflow: hidden;
}

.file-upload-progress {
  float: right;
  width: 300px;
}

/*****************************************************************************
Contribution wizard styling
*****************************************************************************/
.wizard-layout #col2,
#affix-div {
  width: 221px;
}

.wizard-layout .rightNav {
  position: fixed;
}

.wizard-layout #col2 {
  padding-left: 8px;
}

#wizard-pagelist {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  margin: 15px 0;
  background: #fff;
}

#wizard-pagelist ul {
  border-top: 1px solid #fff;
  border-bottom: 1px solid #fff;
  background: url(../images/bg-rhs-nav.gif) 0 bottom repeat-x;
  padding: 10px 12px;
  list-style: none;
}

#wizard-pagelist ul li {
  margin: 6px 0;
  background: url(../images/rhs-nav-list-icon.ltr.png) 0 0 no-repeat;
  padding: 2px 0px 2px 15px;
}

#wizard-pagelist ul li.active {
  background: url(../images/rhs-nav-list-icon-dark.ltr.png) 0 0 no-repeat;
  :before {
    content: "\e24d";
    font-family: "Material Icons";
    font-size: 20px;
    color: $menuItemIconColor;
    vertical-align: middle;
    padding-right: 8px;
  }
}
/* ... */

